Separate the state of the universe and the generation algorithm
Encapsulate the state of the universe and the generation algorithm in separate classes.

--- a/Game of Life/Looking good_/task.html
+++ b/Game of Life/Looking good_/task.html
@@ -27,6 +27,6 @@ public class GameOfLife extends JFrame {
 }
 </code></pre>
 
-<p>For the testing reasons, you need to set the name of each component using the method <code class="language-java">component.setName(String name)</code>.</p>
+<p>For testing reasons, you need to set the name of each component using the method <code class="language-java">component.setName(String name)</code>.</p>
 
-<p>Name your labels with names <code class="language-java">"GenerationLabel"</code> and <code class="language-java">"AliveLabel"</code>.</p>
+<p>Name your labels  <code class="language-java">"GenerationLabel"</code> and <code class="language-java">"AliveLabel"</code>.</p>
