--- a/Game of Life/Life goes by/task.html
+++ b/Game of Life/Life goes by/task.html
@@ -2,7 +2,7 @@
 
 <p>Well, now the universe is created, and its laws work properly.</p>
 
-<p>Let’s visualize evolution. In the previous stage, we could see only one generation. It would be better if each generation was displayed. But our perception is not as fast as computer’s, so our application should sleep a little after each generation.</p>
+<p>Let’s visualize evolution. In the previous stage, we could see only one generation. It would be better if each generation was displayed. But our perception is not as fast as a computer’s, so our application should sleep a little after each generation.</p>
 
 <p>Use methods of the class <code class="java">java.lang.Thread</code> to achieve this goal.</p>
 
